# python-agents-examples

./: CLAUDE.md
complex-agents/doheny-surf-desk/: README.md  agent.py  pyproject.toml  utils.py
complex-agents/doheny-surf-desk/agents/: __init__.py  base_agent.py  billing_agent.py  frontdesk_agent.py  gear_agent.py  intake_agent.py  observer_agent.py  scheduler_agent.py
complex-agents/doheny-surf-desk/prompts/: billing_prompt.yaml  consent_prompt.yaml  frontdesk_prompt.yaml  gear_prompt.yaml  observer_prompt.yaml  reading_guidelines.yaml  scheduler_prompt.yaml
complex-agents/doheny-surf-desk/tasks/: __init__.py  age_task.py  consent_task.py  email_task.py  experience_task.py  name_task.py  notification_task.py  payment_details_task.py  phone_task.py  preferences_task.py
complex-agents/doheny-surf-desk/tests/: AGENTS.md  test_agent.py
complex-agents/doheny-surf-desk/tools/: __init__.py  calendar_tools.py  payment_tools.py  tide_tools.py
complex-agents/exa-deep-researcher/: .gitignore  Dockerfile  README.md  __init__.py  agent.py  orchestrator.py  pyproject.toml  test_orchestrator.py
complex-agents/exa-deep-researcher/agent/: __init__.py  exa_client.py  job_manager.py  job_runner.py  prompts.py  schemas.py  utils.py
complex-agents/exa-deep-researcher/agent/execution/: job_runner.py
complex-agents/exa-deep-researcher/agent/handlers/: __init__.py  rpc.py  status.py
complex-agents/exa-deep-researcher/frontend/: README.md  package-lock.json  package.json
complex-agents/exa-deep-researcher/tests/: test_agent.py  test_orchestrator.py
docs/: index.yaml
(+44 files in other folders)
